--- a/platforms/windows/projects/Network/Network.vcxproj
+++ b/platforms/windows/projects/Network/Network.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="$(MC_ROOT)\source\network\packets\SetEntityMotionPacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\ExplodePacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\TileEventPacket.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\network\packets\PlayerActionPacket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\network\MinecraftPackets.hpp" />
@@ -138,6 +139,7 @@
     <ClInclude Include="$(MC_ROOT)\source\network\packets\SetEntityMotionPacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\ExplodePacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\TileEventPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\PlayerActionPacket.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
