--- a/platforms/windows/projects/Network/Network.vcxproj
+++ b/platforms/windows/projects/Network/Network.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="$(MC_ROOT)\source\network\packets\ExplodePacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\TileEventPacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\PlayerActionPacket.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\network\packets\AddEntityPacket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\network\MinecraftPackets.hpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="$(MC_ROOT)\source\network\packets\ExplodePacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\TileEventPacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\PlayerActionPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\AddEntityPacket.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
