--- a/platforms/sdl/sdl2/android/gradle/wrapper/gradle-wrapper.properties
+++ b/platforms/sdl/sdl2/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Thu Nov 11 18:20:34 PST 2021
 distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
 distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.5-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
