--- a/platforms/sdl/sdl2/android/app/build.gradle
+++ b/platforms/sdl/sdl2/android/app/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName '1.0'
         externalNativeBuild {
             cmake {
-                arguments '-DANDROID_PLATFORM=android-21', '-DANDROID_STL=c++_static'
+                arguments '-DANDROID_PLATFORM=android-21', '-DANDROID_STL=c++_static', '-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON'
                 abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
             }
         }
