--- a/platforms/sdl/sdl2/android/app/build.gradle
+++ b/platforms/sdl/sdl2/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+def useCcache = System.getenv("USE_CCACHE") == "1"
+
 android {
     compileSdk 36
     defaultConfig {
@@ -13,6 +15,10 @@ android {
             cmake {
                 arguments '-DANDROID_PLATFORM=android-21', '-DANDROID_STL=c++_static', '-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON'
                 abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+                if (useCcache) {
+                    arguments += '-DCMAKE_C_COMPILER_LAUNCHER=ccache'
+                    arguments += '-DCMAKE_CXX_COMPILER_LAUNCHER=ccache'
+                }
             }
         }
     }
