--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -188,7 +188,7 @@ jobs:
                 distribution: 'temurin'
                 cache: gradle
           - name: Install Dependencies
-            run: apt-get install --no-install-recommends -y ccache
+            run: sudo apt-get install --no-install-recommends -y ccache
           - name: Build
             run: |
                 cd ${{ matrix.directory }}
