--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,6 +195,8 @@ jobs:
                 ./gradlew assembleDebug
             env:
                 USE_CCACHE: 1
+          - name: Pack cache
+            run: cd ~ && tar cJf ccache.tar.xz .cache/ccache
 
     mingw:
         strategy:
