--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -223,7 +223,7 @@ jobs:
           - uses: actions/cache@v5
             with:
               path: ~/ccache.tar.xz
-              key: ios-artifact-${{ steps.get-time.outputs.time }}
+              key: android-artifact-${{ steps.get-time.outputs.time }}
               restore-keys: ios-artifact-
           - name: Unpack cache
             run: cd ~ && [ -f ccache.tar.xz ] && tar xf ccache.tar.xz || true
