--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -184,7 +184,7 @@ jobs:
             with:
               path: ~/ccache.tar.xz
               key: android-${{ steps.get-time.outputs.time }}
-              restore-keys: ios-
+              restore-keys: android-
           - name: Unpack cache
             run: cd ~ && [ -f ccache.tar.xz ] && tar xf ccache.tar.xz || true
           - name: Checkout Repository
