--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -242,7 +242,7 @@ jobs:
           - name: Build
             run: |
                 cd ${{ matrix.directory }}
-                ./gradlew assembleRelease
+                CCACHE_COMPILERCHECK="%compiler% -v" ./gradlew assembleRelease
             env:
                 USE_CCACHE: 1
           - uses: upup-company/apksigner-android@v1
